test/bad/generics/call06.px

func f<A>(g: A->A) def
    return

f(sign)
